--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="time; URL=https://www.peterrohde.org">
+<meta http-equiv="refresh" content="0; URL=https://www.peterrohde.org">
